--- a/src/app/home/header/header.component.scss
+++ b/src/app/home/header/header.component.scss
@@ -1,17 +1,7 @@
-edp-header {
-  ion-navbar {
-    border-bottom: solid 4px #FF8C00;
-  }
-  ion-row{
-    ion-buttons{
-      button{
-        height: 40px !important;
-        width: 100%;
 
-      }
-    }
-
-  }
-
-
-}
+//.user-sign-up-alert{
+//  --width:'600px';
+//  --max-width:'600px';
+//  --min-width:'600px';
+//  --background:'ffffff'
+//}
