--- a/src/app/home/header/header.component.scss
+++ b/src/app/home/header/header.component.scss
@@ -1,7 +1,10 @@
 
-//.user-sign-up-alert{
-//  --width:'600px';
-//  --max-width:'600px';
-//  --min-width:'600px';
-//  --background:'ffffff'
-//}
+.userSignUpAlert {
+  background-color: #0ec254;
+  color: yellow;
+  --width: '600px';
+  --max-width: '600px';
+  --min-width: '600px';
+
+}
+
