--- a/src/app/home/menu-action/menu.action.component.html
+++ b/src/app/home/menu-action/menu.action.component.html
@@ -3,12 +3,16 @@
     <ion-title style="padding-left: 10px">{{ title }}</ion-title>
   </ion-toolbar>
 
+
+
   <ion-list >
-    <button  ion-item *ngFor="let menuItem of workflow" (click)="menuClick(menuItem)">
-      <ion-icon [name]="menuItem['status']=='Completed'?'ios-ribbon-outline':'ios-stopwatch-outline'"></ion-icon>
-    <span >{{ menuItem.taskName }}</span>
-    </button>
+    <ion-item *ngFor="let menuItem of workflow" (click)="menuClick(menuItem)">
+      <ion-icon [name]="menuItem['status']=='Completed'?'radio-button-on':'radio-button-off'"></ion-icon>
+      <span >{{ menuItem.name }}</span>
+    </ion-item>
   </ion-list>
+
+
 
 
 
