--- a/src/app/home/menu-action/menu.action.component.html
+++ b/src/app/home/menu-action/menu.action.component.html
@@ -2,13 +2,10 @@
   <ion-toolbar color ='secondary'>
     <ion-title style="padding-left: 10px">{{ title }}</ion-title>
   </ion-toolbar>
-
-
-
   <ion-list >
     <ion-item *ngFor="let menuItem of workflow" (click)="menuClick(menuItem)">
-      <ion-icon [name]="menuItem['status']=='Completed'?'radio-button-on':'radio-button-off'"></ion-icon>
-      <span >{{ menuItem.name }}</span>
+      <ion-radio slot="start" [checked]="menuItem.status=='Completed'"></ion-radio>
+      <ion-label>{{ menuItem.name }}</ion-label>
     </ion-item>
   </ion-list>
 
