--- a/src/app/home/functions/forecasting/forecasting.html
+++ b/src/app/home/functions/forecasting/forecasting.html
@@ -36,44 +36,44 @@
 <ion-content>
   <div [ngSwitch]="tabs">
   <ion-grid  *ngSwitchCase="parameters.tabs_value[0]">
-    <ion-row style="border-bottom-width: 1px">
-      <ion-col col-1></ion-col>
-      <ion-col col-2><ion-label color="primary">{{ parameters.labels[0] }}</ion-label></ion-col>
-      <ion-col col-3>
+    <ion-row style="border-bottom-width: 1px;margin-top: 40px;">
+
+      <ion-col size="2" offset="1"><ion-label color="primary">{{ parameters.labels[0] }}</ion-label></ion-col>
+      <ion-col size="3">
         <ion-input type="number" [placeholder]="parameters.labels[0]" [(ngModel)]="forcast.b2b" (ionChange)="onChange()" >
         </ion-input>
       </ion-col>
-      <ion-col col-6 >
+      <ion-col size="6">
         <ion-range pin="true" snaps="true" [(ngModel)]="forcast.b2b" min="100000000" max="1000000000" step="100000000" style="padding-top:0">
-        <ion-icon range-left small name="remove"></ion-icon>
-        <ion-icon range-right name="add"></ion-icon>
+        <ion-icon name="remove"></ion-icon>
+        <ion-icon name="add"></ion-icon>
 
       </ion-range>
       </ion-col>
     </ion-row>
     <ion-row style="border-bottom-width: 1px">
-      <ion-col col-1></ion-col>
-      <ion-col col-2><ion-label color="primary">{{ parameters.labels[1] }}</ion-label></ion-col>
-      <ion-col col-3>
+
+      <ion-col size="2" offset="1"><ion-label color="primary">{{ parameters.labels[1] }}</ion-label></ion-col>
+      <ion-col size="3">
         <ion-input type="number" [placeholder]="parameters.labels[1]" [(ngModel)]="forcast.b2c" (ionChange)="onChange()">
         </ion-input>
       </ion-col>
-      <ion-col col-6 >
+      <ion-col size="6" >
         <ion-range pin="true" snaps="true" [(ngModel)]="forcast.b2c" min="100000000" max="1000000000" step="100000000" style="padding-top:0">
-          <ion-icon range-left small name="remove"></ion-icon>
-          <ion-icon range-right name="add"></ion-icon>
+          <ion-icon slot="left"  size="small" name="remove"></ion-icon>
+          <ion-icon slot="right" name="add"></ion-icon>
 
         </ion-range>
       </ion-col>
     </ion-row>
     <ion-row style="border-bottom-width: 1px">
-      <ion-col col-1></ion-col>
-      <ion-col col-2><ion-label color="primary">{{ parameters.labels[2] }}</ion-label></ion-col>
-      <ion-col col-3>
+
+      <ion-col size="2" offset="1"> <ion-label color="primary">{{ parameters.labels[2] }}</ion-label></ion-col>
+      <ion-col size="3">
         <ion-input type="number" [placeholder]="parameters.labels[2]" [(ngModel)]="forcast.newoffering" (ionChange)="onChange()">
         </ion-input>
       </ion-col>
-      <ion-col col-6 >
+      <ion-col size="6" >
         <ion-range pin="true" snaps="true" [(ngModel)]="forcast.newoffering" min="100000000" max="1000000000" step="100000000" style="padding-top:0">
           <ion-icon range-left small name="remove"></ion-icon>
           <ion-icon range-right name="add"></ion-icon>
