--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -10,7 +10,7 @@
 
         </ion-col>
         <ion-col size="4">
-            <ion-note  color="dark">Message Message Message Message Message Message, MessageMessage Message Message Message Message Message</ion-note>
+            <ion-note  color="dark">{{ sys_message }}</ion-note>
         </ion-col>
         <ion-col size="1">
             <ion-button color="primary" expand="block">{{ companySummary.groupName}}</ion-button>
