--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -1,64 +1,53 @@
-
-
-<ion-toolbar color="primary" >
-  <ion-row>
-    <ion-col size="6">
-        <ion-buttons >
-          <ion-button shape="round" (click)="loadPage('home')" >
-            <ion-icon slot='icon-only' name="ios-globe"></ion-icon>
+<ion-toolbar color="primary">
+    <ion-buttons slot="start">
+        <ion-button (click)="loadPage('home')" shape="round">
+            <ion-icon name="ios-globe" slot='start'></ion-icon>
             Home
-          </ion-button>
-          <ion-button shape="round" (click)="toggleMenu('action')" >
-            <ion-icon slot='icon-only' name="ios-list"></ion-icon>
-            Action
-          </ion-button>
-          <ion-button shape="round" (click)="loadPage('home')" >
-            <ion-icon slot='icon-only' name="ios-stats"></ion-icon>
-            Stat
-          </ion-button>
-          <ion-button shape="round" (click)="loadPage('home')" >
-            <ion-icon slot='icon-only' name="ios-filing"></ion-icon>
-            Account
-          </ion-button>
-          <ion-button shape="round" (click)="loadPage('home')" >
-            <ion-icon slot='icon-only' name="ios-switch"></ion-icon>
-            Settings
-          </ion-button>
-          <ion-button  shape="round" (click)="toggleMenu('budget')" >
-            <ion-icon slot='icon-only' name="ios-trending-up"></ion-icon>
-            Budget
-          </ion-button>
-          <ion-button shape="round" (click)="toggleMenu('help')" >
-            <ion-icon slot='icon-only' name="ios-school"></ion-icon>
-            Help
-          </ion-button>
-        </ion-buttons>
-    </ion-col>
-    <ion-col size="4">
-      <ion-buttons >
-        <ion-button clear block>
-          Leading in a World Of Disruption
         </ion-button>
-      </ion-buttons>
-          </ion-col>
-          <ion-col size="2">
-<ion-buttons>
-  <ion-button clear block>
-    {{ shareService.current_user==null?"Anonymous":shareService.current_user['username'] }}
-  </ion-button>
-  <ion-button shape="round" (click)="joinTeam()" *ngIf="viewCtl.showJoinTeam">
-    <ion-icon slot='icon-only' name="ios-contacts"></ion-icon>
-  </ion-button>
-  <ion-button shape="round" (click)="signUp()" *ngIf="viewCtl.showSignup">
-    <ion-icon slot='icon-only' name="ios-add-circle-outline"></ion-icon>
-  </ion-button>
-  <ion-button shape="round" (click)="logout()" *ngIf="viewCtl.showLogOut">
-    <ion-icon slot='icon-only' name="ios-log-out"></ion-icon>
-  </ion-button>
-  </ion-buttons>
+        <ion-button (click)="toggleMenu('action')" shape="round">
+            <ion-icon name="ios-list" slot='start'></ion-icon>
+            Action
+        </ion-button>
+        <ion-button (click)="loadPage('home')" shape="round">
+            <ion-icon name="ios-stats" slot='start'></ion-icon>
+            Stat
+        </ion-button>
+        <ion-button (click)="loadPage('home')" shape="round">
+            <ion-icon name="ios-filing" slot='start'></ion-icon>
+            Account
+        </ion-button>
+        <ion-button (click)="loadPage('home')" shape="round">
+            <ion-icon name="ios-switch" slot='start'></ion-icon>
+            Settings
+        </ion-button>
+        <ion-button (click)="toggleMenu('budget')" shape="round">
+            <ion-icon name="ios-trending-up" slot='start'></ion-icon>
+            Budget
+        </ion-button>
+        <ion-button (click)="toggleMenu('help')" shape="round">
+            <ion-icon name="ios-school" slot='start'></ion-icon>
+            Help
+        </ion-button>
+    </ion-buttons>
 
-    </ion-col>
-  </ion-row>
+    <ion-title tappable="">
+        Leading in a World Of Disruption
+    </ion-title>
+
+    <ion-buttons slot="end">
+        <ion-button block clear>
+            {{ shareService.current_user == null ? "Anonymous" : shareService.current_user['username'] }}
+        </ion-button>
+        <ion-button (click)="joinTeam()" *ngIf="viewCtl.showJoinTeam" shape="round">
+            <ion-icon name="ios-contacts" slot='icon-only'></ion-icon>
+        </ion-button>
+        <ion-button (click)="signUp()" *ngIf="viewCtl.showSignup" shape="round">
+            <ion-icon name="ios-add-circle-outline" slot='icon-only'></ion-icon>
+        </ion-button>
+        <ion-button (click)="logout()" *ngIf="viewCtl.showLogOut" shape="round">
+            <ion-icon name="ios-log-out" slot='icon-only'></ion-icon>
+        </ion-button>
+    </ion-buttons>
 
 </ion-toolbar>
 
