--- a/src/app/home/functions/hiring/hiring.html
+++ b/src/app/home/functions/hiring/hiring.html
@@ -1,10 +1,8 @@
 <ion-header>
-    <!--      <button ion-button  icon-only (click)="clickFileInput()">-->
-    <!--          <ion-icon name="document"></ion-icon>-->
-            <input #fileUpload (change)="fileChange($event)" [uploader]="uploader"  accept="image/*"  id="selectedFile" ng2FileSelect
-                   style="display: none;" type="file">
-    <!--        &lt;!&ndash;<input type="file" id="selectedFile" (change)="fileChange($event)"  accept=".pdf" style="display: none">&ndash;&gt;-->
-    <!--      </button>-->
+    <input #fileUploadImage [uploader]="uploaderImage" accept="image/*" id="imageFile" ng2FileSelect
+           style="display: none;" type="file">
+    <input #fileUploadPDF [uploader]="uploaderPDF" accept=".pdf" id="PDFFile" ng2FileSelect
+           style="display: none;" type="file">
 
     <ion-toolbar color="tertiary">
 
@@ -37,24 +35,16 @@
 </ion-header>
 
 <ion-content>
-<!--    <input (uploadOutput)="onUploadOutput($event)" [options]="options" [uploadInput]="uploadInput" id="selectedFile" multiple ngFileSelect onclick="this.value = null" style="display: none;"  type="file">-->
+    <!--    <input (uploadOutput)="onUploadOutput($event)" [options]="options" [uploadInput]="uploadInput" id="selectedFile" multiple ngFileSelect onclick="this.value = null" style="display: none;"  type="file">-->
     <div>
         <ion-grid>
             <ion-row *ngFor="let employee of employees" style="border-bottom-width: 1px">
 
                 <ion-col size="1"></ion-col>
                 <ion-col size="3">
-<!--                    <ion-item>-->
-<!--                        <ion-avatar item-start>-->
-<!--                            <img src={{employee.url}}>-->
-<!--                        </ion-avatar>-->
-<!--                        <h2>{{employee.employeeName}} </h2>-->
-<!--                        <h3>{{employee.title}} </h3>-->
-<!--                        <p>Minimum Salary :{{employee.minimumSalary}} </p>-->
-<!--                    </ion-item>-->
                     <ion-item lines="none">
-                        <ion-avatar (click)="uploadAvatar(employee)" slot="start">
-                            <img [src]="employee['avatarId']==null?'assets/img/Businessman.png':'http://0.0.0.0/api/files/download/'+employee['avatarId']">
+                        <ion-avatar (click)="uploadImage(employee)" slot="start">
+                            <img [src]="(employee['avatarId']!=null&&employee['avatarId']!=''&&employee['avatarId']!=undefined)?'http://0.0.0.0/api/files/download/'+employee['avatarId']:'assets/img/Businessman.png'">
                         </ion-avatar>
                         <ion-label>
                             <h2>{{employee.name}} </h2>
@@ -62,27 +52,32 @@
                             <p>Minimum Salary :{{employee.minimumSalary}} </p>
                         </ion-label>
                         <ion-buttons>
-                            <ion-button (click)="openPdf(employee.resume)" >
-                                <ion-icon name="information-circle"></ion-icon>
+                            <ion-button (click)="uploadPDF(employee)">
+                                <ion-icon name="add"></ion-icon>
+                            </ion-button>
+                            <ion-button
+                                    (click)="openPdf(employee.resumeId)"
+                                    *ngIf="employee['resumeId']!=null&&employee['resumeId']!=''&&employee['resumeId']!=undefined">
+                                <ion-icon name="paper"></ion-icon>
                             </ion-button>
                         </ion-buttons>
                     </ion-item>
-
                 </ion-col>
-<!--                <ion-col col-1>-->
-<!--                    <ion-buttons end>-->
-<!--                        <button ion-button clear icon-only (click)="openPdf(employee.resume)" style="padding-top:20px">-->
-<!--                            <ion-icon name="information-circle"></ion-icon>-->
-<!--                        </button>-->
-<!--                    </ion-buttons>-->
-<!--                </ion-col>-->
+                <!--                <ion-col col-1>-->
+                <!--                    <ion-buttons end>-->
+                <!--                        <button ion-button clear icon-only (click)="openPdf(employee.resume)" style="padding-top:20px">-->
+                <!--                            <ion-icon name="information-circle"></ion-icon>-->
+                <!--                        </button>-->
+                <!--                    </ion-buttons>-->
+                <!--                </ion-col>-->
                 <ion-col align-self-center size="2" text-center>
                     <ion-input [(ngModel)]="employee.salaryOffer_t" [placeholder]="employee.salaryOffer_t" disabled
                                type="text">
                     </ion-input>
                 </ion-col>
                 <ion-col size="4">
-                    <ion-range (ionChange)="onChange(employee)" [(ngModel)]="employee.salaryOffer" [max]="employee.minimumSalary*2" [min]="employee.minimumSalary"
+                    <ion-range (ionChange)="onChange(employee)" [(ngModel)]="employee.salaryOffer"
+                               [max]="employee.minimumSalary*2" [min]="employee.minimumSalary"
                                pin="true" snaps="true" step="10000"
                                style="padding-top:20px">
                         <ion-icon name="remove" range-left small></ion-icon>
