--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,51 +1,48 @@
-<ion-header id = 'header_line'>
-  <edp-header></edp-header>
+<ion-header id='header_line'>
+    <edp-header></edp-header>
 </ion-header>
 
-<ion-menu type = "overlay" side="start" menuId="action">
-  <edp-main-menu></edp-main-menu>
+<ion-menu menuId="action" side="start" type="overlay">
+    <edp-main-menu></edp-main-menu>
 </ion-menu>
 
-
-<ion-menu type="overlay" menuId="budget" side="end">
-  <edp-budget-menu></edp-budget-menu>
+<ion-menu menuId="budget" side="end" type="overlay">
+    <edp-budget-menu></edp-budget-menu>
 </ion-menu>
 
-<ion-menu type="overlay" menuId="help" side="end">
+<ion-menu menuId="help" side="end" type="overlay">
     <edp-budget-menu></edp-budget-menu>
 </ion-menu>
 
 <ion-router-outlet main></ion-router-outlet>
 <ion-content class="ion-content">
-  <ion-grid >
-    <ion-row style="height: 100%">
-      <ion-col col-2 >
-        <ion-row id="fixed-menu" style="height: 70%">
-          <ion-card >
-<!--            <edp-directive-menu-fixed></edp-directive-menu-fixed>-->
-          </ion-card>
+    <ion-grid>
+        <ion-row style="height: 100%">
+            <ion-col col-2>
+                <ion-row id="fixed-menu" style="height: 70%">
+                    <ion-card>
+                        <!--            <edp-directive-menu-fixed></edp-directive-menu-fixed>-->
+                    </ion-card>
+                </ion-row>
+                <ion-row id="status-area" style="height: 30%">
+                    <ion-card>
+                        <!--            <edp-directive-status></edp-directive-status>-->
+                    </ion-card>
+                </ion-row>
+            </ion-col>
+            <ion-col col-10>
+                <ion-row id="content-area" style="height: 90%">
+                    <!--          <edp-directive-content></edp-directive-content>-->
+                </ion-row>
+                <ion-row id="message-area" style="height: 10%">
+                    <ion-card>
+                        <!--            <edp-directive-message></edp-directive-message>-->
+                    </ion-card>
+                </ion-row>
+            </ion-col>
         </ion-row>
-        <ion-row id="status-area" style="height: 30%">
-          <ion-card >
-<!--            <edp-directive-status></edp-directive-status>-->
-          </ion-card>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-10>
-        <ion-row id="content-area" style="height: 90%">
-<!--          <edp-directive-content></edp-directive-content>-->
-        </ion-row>
-        <ion-row id="message-area" style="height: 10%">
-          <ion-card >
-<!--            <edp-directive-message></edp-directive-message>-->
-          </ion-card>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    </ion-grid>
 </ion-content>
 <ion-footer>
-
     <edp-footer></edp-footer>
 </ion-footer>
