--- a/src/app/welcome/welcome.html
+++ b/src/app/welcome/welcome.html
@@ -1,12 +1,12 @@
 <ion-content>
     <div>
-        <video class="welcome-anim" loop autoplay>
+        <video autoplay class="welcome-anim" loop>
             <source src="https://webassets.mongodb.com/_com_assets/media/mdb-video-hero-hp-mongodb-16-9.mp4"
                     type="video/mp4">
         </video>
     </div>
     <ion-buttons class="welcome-buttons">
-        <ion-button color="primary" size="large" fill="solid" (click)="login()"> LOGIN</ion-button>
-        <ion-button color="primary" size="large" fill="solid"  (click)="signup()"> SIGNUP</ion-button>
+        <ion-button (click)="login()" color="primary" fill="solid" size="large"> LOGIN</ion-button>
+        <ion-button (click)="signup()" color="primary" fill="solid" size="large"> SIGNUP</ion-button>
     </ion-buttons>
 </ion-content>
