--- a/src/app/home/functions/forecasting/forecasting.html
+++ b/src/app/home/functions/forecasting/forecasting.html
@@ -1,114 +1,112 @@
 <ion-header>
-  <ion-toolbar color="tertiary" >
+    <ion-toolbar color="tertiary">
+        <ion-title>Forecast</ion-title>
+        <ion-buttons slot="end">
+            <ion-button (click)="openPdf()">
+                <ion-icon name="document"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-button (click)="openPdf(task_info['infoFile'])">
+                <ion-icon name="information-circle"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-button (click)="dismiss()">
+                <ion-icon name="close"></ion-icon>
+            </ion-button>
 
-    <ion-title>Forecast</ion-title>
+        </ion-buttons>
+    </ion-toolbar>
+    <ion-toolbar>
+        <ion-segment [(ngModel)]="tabs" item-start>
+            <ion-segment-button [value]="parameters.tabs_value[0]">
+                {{parameters.tabs_disp[0]}}
+            </ion-segment-button>
 
-    <ion-buttons slot="end">
-
-      <ion-button  (click)="openPdf()">
-        <ion-icon name="document"></ion-icon>
-      </ion-button>
-
-    </ion-buttons>
-    <ion-buttons slot="end">
-      <ion-button (click)="openPdf(task_info['infoFile'])">
-        <ion-icon name="information-circle"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-
-    <ion-buttons slot="end">
-      <ion-button  (click)="dismiss()">
-        <ion-icon name="close"></ion-icon>
-      </ion-button>
-
-    </ion-buttons>
-  </ion-toolbar>
-  <ion-toolbar >
-    <ion-segment [(ngModel)]="tabs" item-start>
-      <ion-segment-button [value]="parameters.tabs_value[0]">
-        {{parameters.tabs_disp[0]}}
-      </ion-segment-button>
-
-    </ion-segment>
-  </ion-toolbar>
+        </ion-segment>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div [ngSwitch]="tabs">
-  <ion-grid  *ngSwitchCase="parameters.tabs_value[0]">
-    <ion-row style="border-bottom-width: 1px;margin-top: 40px;">
-
-      <ion-col size="2" offset="1"><ion-label color="primary">{{ parameters.labels[0] }}</ion-label></ion-col>
-      <ion-col size="3">
-        <ion-input type="number" [placeholder]="parameters.labels[0]" [(ngModel)]="forcast.b2b" (ionChange)="onChange()" >
-        </ion-input>
-      </ion-col>
-      <ion-col size="6">
-        <ion-range pin="true" snaps="true" [(ngModel)]="forcast.b2b" min="100000000" max="1000000000" step="100000000" style="padding-top:0">
-        <ion-icon name="remove"></ion-icon>
-        <ion-icon name="add"></ion-icon>
-
-      </ion-range>
-      </ion-col>
-    </ion-row>
-    <ion-row style="border-bottom-width: 1px">
-
-      <ion-col size="2" offset="1"><ion-label color="primary">{{ parameters.labels[1] }}</ion-label></ion-col>
-      <ion-col size="3">
-        <ion-input type="number" [placeholder]="parameters.labels[1]" [(ngModel)]="forcast.b2c" (ionChange)="onChange()">
-        </ion-input>
-      </ion-col>
-      <ion-col size="6" >
-        <ion-range pin="true" snaps="true" [(ngModel)]="forcast.b2c" min="100000000" max="1000000000" step="100000000" style="padding-top:0">
-          <ion-icon slot="left"  size="small" name="remove"></ion-icon>
-          <ion-icon slot="right" name="add"></ion-icon>
-
-        </ion-range>
-      </ion-col>
-    </ion-row>
-    <ion-row style="border-bottom-width: 1px">
-
-      <ion-col size="2" offset="1"> <ion-label color="primary">{{ parameters.labels[2] }}</ion-label></ion-col>
-      <ion-col size="3">
-        <ion-input type="number" [placeholder]="parameters.labels[2]" [(ngModel)]="forcast.newoffering" (ionChange)="onChange()">
-        </ion-input>
-      </ion-col>
-      <ion-col size="6" >
-        <ion-range pin="true" snaps="true" [(ngModel)]="forcast.newoffering" min="100000000" max="1000000000" step="100000000" style="padding-top:0">
-          <ion-icon range-left small name="remove"></ion-icon>
-          <ion-icon range-right name="add"></ion-icon>
-
-        </ion-range>
-      </ion-col>
-    </ion-row>
-
-    <ion-item-divider></ion-item-divider>
-    <ion-row style="border-bottom-width: 1px">
-
-      <ion-col col-1></ion-col>
-      <ion-col col-2><ion-label color="primary">{{ parameters.labels[3] }}</ion-label></ion-col>
-      <ion-col col-3>
-        <ion-input  [placeholder]="parameters.labels[3]" [(ngModel)]="forcast.total_disp" disabled>
-        </ion-input>
-      </ion-col>
-      <ion-col col-6 >
-        <ion-range disabled pin="true" snaps="true" [(ngModel)]="forcast.total" min="100000000" max="3000000000" step="100000000" style="padding-top:0">
-          <ion-icon range-left small name="remove"></ion-icon>
-          <ion-icon range-right name="add"></ion-icon>
-
-        </ion-range>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  </div>
-
-
-
+    <div [ngSwitch]="tabs">
+        <ion-grid *ngSwitchCase="parameters.tabs_value[0]">
+            <ion-row style="border-bottom-width: 1px;margin-top: 40px;">
+                <ion-col offset="1" size="2">
+                    <ion-label color="primary">{{ parameters.labels[0] }}</ion-label>
+                </ion-col>
+                <ion-col size="3">
+                    <ion-input (ionChange)="onChange()" [(ngModel)]="forcast.b2b" [placeholder]="parameters.labels[0]"
+                               type="number">
+                    </ion-input>
+                </ion-col>
+                <ion-col size="6">
+                    <ion-range [(ngModel)]="forcast.b2b" max="1000000000" min="100000000" pin="true" snaps="true"
+                               step="100000000" style="padding-top:0">
+                        <ion-icon name="remove"></ion-icon>
+                        <ion-icon name="add"></ion-icon>
+                    </ion-range>
+                </ion-col>
+            </ion-row>
+            <ion-row style="border-bottom-width: 1px">
+                <ion-col offset="1" size="2">
+                    <ion-label color="primary">{{ parameters.labels[1] }}</ion-label>
+                </ion-col>
+                <ion-col size="3">
+                    <ion-input (ionChange)="onChange()" [(ngModel)]="forcast.b2c" [placeholder]="parameters.labels[1]"
+                               type="number">
+                    </ion-input>
+                </ion-col>
+                <ion-col size="6">
+                    <ion-range [(ngModel)]="forcast.b2c" max="1000000000" min="100000000" pin="true" snaps="true"
+                               step="100000000" style="padding-top:0">
+                        <ion-icon name="remove" size="small" slot="left"></ion-icon>
+                        <ion-icon name="add" slot="right"></ion-icon>
+                    </ion-range>
+                </ion-col>
+            </ion-row>
+            <ion-row style="border-bottom-width: 1px">
+                <ion-col offset="1" size="2">
+                    <ion-label color="primary">{{ parameters.labels[2] }}</ion-label>
+                </ion-col>
+                <ion-col size="3">
+                    <ion-input (ionChange)="onChange()" [(ngModel)]="forcast.newoffering" [placeholder]="parameters.labels[2]"
+                               type="number">
+                    </ion-input>
+                </ion-col>
+                <ion-col size="6">
+                    <ion-range [(ngModel)]="forcast.newoffering" max="1000000000" min="100000000" pin="true"
+                               snaps="true" step="100000000" style="padding-top:0">
+                        <ion-icon name="remove" range-left small></ion-icon>
+                        <ion-icon name="add" range-right></ion-icon>
+                    </ion-range>
+                </ion-col>
+            </ion-row>
+            <ion-item-divider></ion-item-divider>
+            <ion-row style="border-bottom-width: 1px">
+                <ion-col col-1></ion-col>
+                <ion-col col-2>
+                    <ion-label color="primary">{{ parameters.labels[3] }}</ion-label>
+                </ion-col>
+                <ion-col col-3>
+                    <ion-input [(ngModel)]="forcast.total_disp" [placeholder]="parameters.labels[3]" disabled>
+                    </ion-input>
+                </ion-col>
+                <ion-col col-6>
+                    <ion-range [(ngModel)]="forcast.total" disabled max="3000000000" min="100000000" pin="true"
+                               snaps="true" step="100000000" style="padding-top:0">
+                        <ion-icon name="remove" range-left small></ion-icon>
+                        <ion-icon name="add" range-right></ion-icon>
+                    </ion-range>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </div>
 </ion-content>
 <ion-footer>
-  <ion-toolbar color="light" >
-  <ion-buttons slot="end">
-    <ion-button color="primary" (click)="submit()">Submit</ion-button>
-  </ion-buttons>
-  </ion-toolbar>
+    <ion-toolbar color="light">
+        <ion-buttons slot="end">
+            <ion-button (click)="submit()" color="primary">Submit</ion-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-footer>
