--- a/src/app/home/functions/pdfviewer/pdfviewer.html
+++ b/src/app/home/functions/pdfviewer/pdfviewer.html
@@ -8,21 +8,49 @@
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
+<ion-toolbar style="border-bottom: 1px #808080 solid">
+    <ion-buttons slot="start">
+        <ion-button (click)="onZoom(0.1)">
+            <ion-icon name="add"></ion-icon>
+        </ion-button>
+        <ion-button (click)="onZoom(1)">
+            100
+        </ion-button>
+        <ion-button (click)="onZoom(-0.1)">
+            <ion-icon name="remove"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+
+    <ion-buttons style="border-left: 1px #808080 solid">
+        <ion-button (click)="onRotate(-90)">
+            <ion-icon name="undo"></ion-icon>
+        </ion-button>
+        <ion-button (click)="onRotate(0)">
+            <ion-icon name="radio-button-on"></ion-icon>
+        </ion-button>
+        <ion-button (click)="onRotate(90)">
+            <ion-icon name="redo"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+        <ion-button (click)="onPage(0)">
+            <ion-icon name="skip-backward"></ion-icon>
+        </ion-button>
+        <ion-button (click)="onPage(-1)">
+            <ion-icon mode="ios" name="arrow-back"></ion-icon>
+        </ion-button>
+        <ion-input [(ngModel)]="currentPage" style="width: 30px" text-center></ion-input>
+        <ion-button (click)="onPage(1)">
+            <ion-icon mode="ios" name="arrow-forward"></ion-icon>
+        </ion-button>
+        <ion-button (click)="onPage(9)">
+            <ion-icon name="skip-forward"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+</ion-toolbar>
 <ion-content>
-    <ion-toolbar>
-        <ion-buttons>
-            <ion-button (click)="onZoom(0.1)">
-                <ion-icon name="add"></ion-icon>
-            </ion-button>
-            <ion-button (click)="onZoom(1)">
-                100
-            </ion-button>
-            <ion-button (click)="onZoom(-0.1)">
-                <ion-icon name="remove"></ion-icon>
-            </ion-button>
-        </ion-buttons>
-    </ion-toolbar>
-    <pdf-viewer [render-text]="true" [src]="pdfSrc" [zoom]="zoom" style="display: block;"></pdf-viewer>
+    <pdf-viewer (after-load-complete)="afterLoadComplete($event)" [(page)]="currentPage" [render-text]="true" [rotation]="rotate" [src]="pdfSrc"
+                [zoom]="zoom" style="display: block;"></pdf-viewer>
 </ion-content>
 
 
