--- a/src/app/home/menu-help/menu.help.component.html
+++ b/src/app/home/menu-help/menu.help.component.html
@@ -1,14 +1,13 @@
-
-  <ion-toolbar color ='secondary'>
+<ion-toolbar color='secondary'>
     <ion-title style="padding-left: 10px">{{ title }}</ion-title>
-  </ion-toolbar>
+</ion-toolbar>
 
-  <ion-list >
-    <button  ion-item *ngFor="let menuItem of workflow" (click)="menuClick(menuItem)">
-      <ion-icon [name]="menuItem['status']=='Completed'?'ios-ribbon-outline':'ios-stopwatch-outline'"></ion-icon>
-    <span >{{ menuItem.taskName }}</span>
+<ion-list>
+    <button (click)="menuClick(menuItem)" *ngFor="let menuItem of workflow" ion-item>
+        <ion-icon [name]="menuItem['status']=='Completed'?'ios-ribbon-outline':'ios-stopwatch-outline'"></ion-icon>
+        <span>{{ menuItem.taskName }}</span>
     </button>
-  </ion-list>
+</ion-list>
 
 
 
