--- a/src/global.scss
+++ b/src/global.scss
@@ -9,6 +9,11 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
 .modalCss{
   --width:80%;
+}
+.modalCss-pdf{
+  --width:80%;
+  --height:75%;
 }
