--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -12,15 +12,15 @@
             <ion-icon slot='icon-only' name="ios-list"></ion-icon>
             Action
           </ion-button>
-          <ion-button shape="round" (click)="loadPage('home')" >
+          <ion-button shape="round" (click)="loadPage('stat')" >
             <ion-icon slot='icon-only' name="ios-stats"></ion-icon>
             Stat
           </ion-button>
-          <ion-button shape="round" (click)="loadPage('home')" >
+          <ion-button shape="round" (click)="loadPage('account')" >
             <ion-icon slot='icon-only' name="ios-filing"></ion-icon>
             Account
           </ion-button>
-          <ion-button shape="round" (click)="loadPage('home')" >
+          <ion-button shape="round" (click)="loadPage('settings')" >
             <ion-icon slot='icon-only' name="ios-switch"></ion-icon>
             Settings
           </ion-button>
