--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,33 +17,9 @@
 
 <ion-router-outlet main></ion-router-outlet>
 <ion-content class="ion-content">
-  <ion-grid >
-    <ion-row style="height: 100%">
-      <ion-col col-2 >
-        <ion-row id="fixed-menu" style="height: 70%">
-          <ion-card >
-<!--            <edp-directive-menu-fixed></edp-directive-menu-fixed>-->
-          </ion-card>
-        </ion-row>
-        <ion-row id="status-area" style="height: 30%">
-          <ion-card >
-<!--            <edp-directive-status></edp-directive-status>-->
-          </ion-card>
-        </ion-row>
 
-      </ion-col>
-      <ion-col col-10>
-        <ion-row id="content-area" style="height: 90%">
-<!--          <edp-directive-content></edp-directive-content>-->
-        </ion-row>
-        <ion-row id="message-area" style="height: 10%">
-          <ion-card >
-<!--            <edp-directive-message></edp-directive-message>-->
-          </ion-card>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <directive-content></directive-content>
+
 </ion-content>
 <ion-footer>
 
