--- a/src/app/home/functions/forecasting/forecasting.html
+++ b/src/app/home/functions/forecasting/forecasting.html
@@ -19,7 +19,7 @@
         </ion-buttons>
     </ion-toolbar>
     <ion-toolbar>
-        <ion-segment [(ngModel)]="tabs" item-start>
+        <ion-segment [(ngModel)]="tabs" slot="start">
             <ion-segment-button [value]="parameters.tabs_value[0]">
                 {{parameters.tabs_disp[0]}}
             </ion-segment-button>
@@ -77,26 +77,22 @@
                 <ion-col size="6">
                     <ion-range [(ngModel)]="forcast.newoffering" max="1000000000" min="100000000" pin="true"
                                snaps="true" step="100000000" style="padding-top:0">
-                        <ion-icon name="remove" range-left small></ion-icon>
-                        <ion-icon name="add" range-right></ion-icon>
                     </ion-range>
                 </ion-col>
             </ion-row>
             <ion-item-divider></ion-item-divider>
             <ion-row style="border-bottom-width: 1px">
-                <ion-col col-1></ion-col>
-                <ion-col col-2>
+                <ion-col size="1"></ion-col>
+                <ion-col size="2">
                     <ion-label color="primary">{{ parameters.labels[3] }}</ion-label>
                 </ion-col>
-                <ion-col col-3>
+                <ion-col size="3">
                     <ion-input [(ngModel)]="forcast.total_disp" [placeholder]="parameters.labels[3]" disabled>
                     </ion-input>
                 </ion-col>
-                <ion-col col-6>
+                <ion-col size="6">
                     <ion-range [(ngModel)]="forcast.total" disabled max="3000000000" min="100000000" pin="true"
                                snaps="true" step="100000000" style="padding-top:0">
-                        <ion-icon name="remove" range-left small></ion-icon>
-                        <ion-icon name="add" range-right></ion-icon>
                     </ion-range>
                 </ion-col>
             </ion-row>
@@ -104,9 +100,9 @@
     </div>
 </ion-content>
 <ion-footer>
-    <ion-toolbar color="light">
+    <ion-toolbar>
         <ion-buttons slot="end">
-            <ion-button (click)="submit()" color="primary">Submit</ion-button>
+            <ion-button (click)="submit()" color="primary" fill="outline">Submit</ion-button>
         </ion-buttons>
     </ion-toolbar>
 </ion-footer>
