--- a/src/app/home/functions/forecasting/forecasting.html
+++ b/src/app/home/functions/forecasting/forecasting.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar color="tertiary">
-        <ion-title>Forecast</ion-title>
+        <ion-title>{{task_info['params']['name']}}</ion-title>
         <ion-buttons slot="end">
             <ion-button (click)="openPdf()">
                 <ion-icon name="document"></ion-icon>
