--- a/src/app/home/functions/workforce/workforce.component.html
+++ b/src/app/home/functions/workforce/workforce.component.html
@@ -4,7 +4,7 @@
     <!--  <input [uploader]="uploaderPDF" accept=".pdf" id="PDFFile" ng2FileSelect-->
     <!--         style="display: none;" type="file">-->
     <ion-toolbar color="tertiary">
-        <ion-title>Workforce</ion-title>
+        <ion-title>{{task_info['params']['name']}}</ion-title>
         <ion-buttons slot="end">
             <ion-button>
                 <ion-icon name="document"></ion-icon>
