--- a/src/app/home/functions/workforce/workforce.component.html
+++ b/src/app/home/functions/workforce/workforce.component.html
@@ -70,7 +70,7 @@
                 <ion-input [(ngModel)]="test2" inputmode="numeric" type="number"></ion-input>
             </ion-col>
             <ion-col>
-                <ion-input inputmode="numeric"></ion-input>
+                <ion-input inputmode="numeric" readonly="true"></ion-input>
             </ion-col>
         </ion-row>
         <ion-row align-items-center>
