--- a/src/app/home/functions/forecasting/forecasting.html
+++ b/src/app/home/functions/forecasting/forecasting.html
@@ -70,7 +70,8 @@
                     <ion-label color="primary">{{ parameters.labels[2] }}</ion-label>
                 </ion-col>
                 <ion-col size="3">
-                    <ion-input (ionChange)="onChange()" [(ngModel)]="forcast.newoffering" [placeholder]="parameters.labels[2]"
+                    <ion-input (ionChange)="onChange()" [(ngModel)]="forcast.newoffering"
+                               [placeholder]="parameters.labels[2]"
                                type="number">
                     </ion-input>
                 </ion-col>
